@@ -33,37 +33,20 @@ extern "C" {
 
 #define MCD_SIZE	(1024 * 8 * 16)
 
-// Status Flags
-#define TX_RDY		0x0001
-#define RX_RDY		0x0002
-#define TX_EMPTY	0x0004
-#define PARITY_ERR	0x0008
-#define RX_OVERRUN	0x0010
-#define FRAMING_ERR	0x0020
-#define SYNC_DETECT	0x0040
-#define DSR			0x0080
-#define CTS			0x0100
-#define IRQ			0x0200
-
-// Control Flags
-#define TX_PERM		0x0001
-#define DTR			0x0002
-#define RX_PERM		0x0004
-#define BREAK		0x0008
-#define RESET_ERR	0x0010
-#define RTS			0x0020
-#define SIO_RESET	0x0040
-
-extern unsigned short StatReg;
-extern unsigned short ModeReg;
-extern unsigned short CtrlReg;
-extern unsigned short BaudReg;
-
 extern char Mcd1Data[MCD_SIZE], Mcd2Data[MCD_SIZE];
 
-unsigned char sioRead8();
 void sioWrite8(unsigned char value);
+void sioWriteStat16(unsigned short value);
+void sioWriteMode16(unsigned short value);
 void sioWriteCtrl16(unsigned short value);
+void sioWriteBaud16(unsigned short value);
+
+unsigned char sioRead8();
+unsigned short sioReadStat16();
+unsigned short sioReadMode16();
+unsigned short sioReadCtrl16();
+unsigned short sioReadBaud16();
+
 void sioInterrupt();
 int sioFreeze(gzFile f, int Mode);
 
